--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asisnota</title>
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <header>
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Cerrar sesion</a></li>
-                <li><a href="./index.html">Cambiar cuenta</a></li>
+                <li><a href="index.html">Cambiar cuenta</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +23,7 @@
             <div class="nav__lateral__usuario">
 
                 <div class="usuario__img">
-                    <img src="../img/pinamar_login_img.png" alt="">
+                    <img src="img/pinamar_login_img.png" alt="">
                 </div>
                 <div class="usuario__info">
                     <span>Mohammed</span>
