--- a/login.html
+++ b/login.html
@@ -26,6 +26,6 @@
         </div>
         
     </main>
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
