--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                 </div>
             </form>
             <div class="contenedor__login__item">
-                <img src="../img/esc_login_img.png" alt="">
+                <img src="img/esc_login_img.png" alt="">
             </div>
         </div>
         
