--- a/login.html
+++ b/login.html
@@ -16,8 +16,8 @@
                 <button type="button" onclick="login()">Iniciar Sesion</button>
                 
                 <div class="form__links">
-                    <a href="#">olvide mi contraseña</a>
-                    <a href="#">ya tengo una cuenta</a>
+                    <a href="#">Olvide mi contraseña</a>
+                    <a href="#">Ya tengo una cuenta</a>
                 </div>
             </form>
             <div class="contenedor__login__item">
